master
- Zixaphir
  Mascot deleting.

0.9beta
- Zixaphir
  Switched default theme to Yotsuba B.
  New Option: Updater Position.
  More flexible margin style options
  -- Disabling the sidebar now centers page content with all margin options.
  -- The 'fully centered' option essentially force-enables the sidebar.
  Theme Customization
  -- New
  -- Import
  -- Export
  -- Edit
  -- Delete

0.8beta
- Zixaphir
  New Themes:
  -- Yotsuba
  -- Yotsuba B
  -- Redid PaisleyChan
  Quote Links and Back Links now have separate color variables.
  Small facelift to the options dialog.

0.7.4beta
- Zixaphir
  New Theme: Solarized

0.7.3beta
- Zixaphir
  Bugfix: Post form now clears properly with "Style" disabled.

0.7.2beta
- Zixaphir
  Changed the font option from a dropdown to a text input.
  Options are now fixed positioned instead of absolutely.
  New option:
    - Mascots Overlap Postform

0.7.1beta
- Zixaphir
  Fixed broken 4chan on fresh install
    I'm so sorry.

0.7beta
- Mayhem
  Use 4chan's API to fetch posts for:
    - Thread Updater.
    - Quote Inlining.
    - Quote Previewing.
    - Thread Expansion.
    - Comment Expansion.
    This will make fetching faster, and reduce bandwidth usage.
  Fix compatibility with Scriptish's auto-udpater.
- Zixaphir
  Fixed auto updating
    (unrelated to similar 4chan x commit by Mayhem)
  Fixed posting with autohide enabled and style enabled.
  AppChan X now removes all 4chan CSS in head with style enabled.

0.6.3beta
- Zixaphir
  Disable inlined 4chan JS "extension".

0.6.2beta
- Mayhem
  Fix 4chan X. Blame moot.
  Fix thread updater
- seaweed
  Fix options button
- Zixaphir
  ~70 more mascots

0.6.1beta
- Mayhem
  Add /g/, /k/, /w/, /an/, /cgl/, /ck/, /lit/, /toy/ and /x/ archived image redirection.
  One-word-captcha now works in the report window.
  Fix duplicate file upload error link.

0.6beta
- Zixaphir
  Select / Clear All Mascots links
  Custom Checkboxes now apply to all checkboxes
  File input doesn't look default-y
