@@ -1,6 +1,7 @@
 master
 - Zixaphir
   Mascot deleting.
+  New Option: 'Images Overlap Post Form'
 
 0.9beta
 - Zixaphir
